--- a/src/style/member/member_coupon.scss
+++ b/src/style/member/member_coupon.scss
@@ -11,6 +11,19 @@
   padding: 5px;
   background-color: $primary-100;
   border-radius: 10px;
+
+  .join {
+    width: 70px;
+    height: 24px;
+    border-radius: 50px;
+    font-size: 12px;
+    background: #4f7f9a;
+    color: white;
+    box-shadow: 0 6px 6px rgba(25, 25, 25, 0.2);
+    justify-content: center;
+    align-items: center;
+    border: 0;
+  }
 }
 
 .btn_style {
