--- a/src/style/member/member_pdcard.scss
+++ b/src/style/member/member_pdcard.scss
@@ -6,10 +6,11 @@
 .ccard {
   width: 100%;
   height: 204px;
-  padding: 14px;
+  padding: 24px 0 0 0;
 
-  .ccard.card-body {
-    padding: 0 0 0 12px;
+  .card-body {
+    width: 460px;
+    padding: 0 0 0 20px;
   }
   .ccc {
     height: 50px;
@@ -35,7 +36,7 @@
     position: relative;
 
     /* margin-left: 7px; */
-    margin-top: 18px;
+    // margin-top: 18px;
     border-radius: 10px;
     z-index: 1;
   }
@@ -73,9 +74,8 @@
   }
 
   .btn_group {
-    margin: 8px;
     .btn-style {
-      margin: 8px;
+      margin: 0 8px;
     }
     .btn_edit {
       background-color: $secondary;
