--- a/src/style/member/member_score.scss
+++ b/src/style/member/member_score.scss
@@ -1,21 +1,21 @@
 .pd_score {
+  margin: 0 auto;
   .mymem_toscoreM {
-    // display: none;
+    padding: 20px;
     .mymem_toscore {
-      padding: 8px;
-
       .mem_toscore {
         width: 42px;
         height: 42px;
         border-radius: 50%;
         margin: 0 8px 0 8px;
       }
-      p {
-        margin: 0 8px;
+      .score_p {
+        // margin: 0 8px 0 0px;
+        padding: 0 32px 0 0px;
       }
 
       .ScoText {
-        width: 660px;
+        width: 600px;
         height: 80px;
       }
     }
@@ -27,8 +27,6 @@
       background: #4f7f9a;
       color: white;
       box-shadow: 0 6px 6px rgba(25, 25, 25, 0.2);
-      justify-content: center;
-      align-items: center;
       border: 0;
     }
     .mymem_toscore {
@@ -36,7 +34,7 @@
       .mem_toscore_G {
         padding: 8px 0 0 0;
         figure {
-          padding: 0;
+          padding: 8px 0;
           margin: 0;
           figcaption {
             // padding: 8px 0;
