--- a/src/style/class/ClassResultCard.scss
+++ b/src/style/class/ClassResultCard.scss
@@ -24,8 +24,7 @@
   .card-title {
     margin: 0px;
     margin-top: 3px;
-    font-size: $font-size-base;
-    font-family: 'TaipeiSansTCBeta-Bold';
+    font-weight: 700;
     font-size: 20px;
     padding: 8px 0;
     width: 450px;
@@ -52,6 +51,15 @@
     z-index: 1;
   }
 
+  .tag {
+    height: 50px;
+    z-index: 400;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    border: 40px solid red;
+  }
+
   .icon {
     height: 15px;
     width: 15px;
@@ -72,8 +80,8 @@
     margin-left: 8px;
   }
   .join {
-    width: 90px;
-    height: 24px;
+    width: 118px;
+    height: 30px;
     border-radius: 50px;
     font-size: 12px;
     background: #4f7f9a;
@@ -81,10 +89,14 @@
     box-shadow: 0 6px 6px rgba(25, 25, 25, 0.2);
     justify-content: center;
     align-items: center;
+    // border: 1px solid red;
     &:hover {
-      color: white;
       transform: translateY(2px);
       box-shadow: 0 3px 3px rgba(25, 25, 25, 0.3);
+    }
+    a {
+      text-decoration: none;
+      color: white;
     }
   }
 
