--- a/src/style/class/search_main.scss
+++ b/src/style/class/search_main.scss
@@ -23,4 +23,10 @@
   .class_result_card {
     margin-bottom: 40px;
   }
+
+  .pagination_block {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 40px;
+  }
 }
