--- a/src/style/default.scss
+++ b/src/style/default.scss
@@ -47,37 +47,44 @@ $navbar-light-active-color: $secondary;
 @font-face {
   font-family: 'TaipeiSansTCBeta-Regular';
   src: url('./font/TaipeiSansTCBeta-Regular.ttf');
-  unicode-range: U+4E00-9FFF;
+  // unicode-range: U+4E00-9FFF;
 }
 @font-face {
   font-family: 'TaipeiSansTCBeta-Bold';
   src: url('./font/TaipeiSansTCBeta-Bold.ttf');
-  unicode-range: U+4E00-9FFF;
+  // unicode-range: U+4E00-9FFF;
 }
 @font-face {
   font-family: 'TaipeiSansTCBeta-Light';
   src: url('./font/TaipeiSansTCBeta-Light.ttf');
-  unicode-range: U+4E00-9FFF;
+  // unicode-range: U+4E00-9FFF;
 }
 @font-face {
-  font-family: 'Roboto-light', sans-serif;
+  font-family: 'Roboto-light';
   src: url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
   unicode-range: U+00-024F;
   font-weight: 300;
 }
 @font-face {
-  font-family: 'Roboto-regular', sans-serif;
+  font-family: 'Roboto';
   src: url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
   unicode-range: U+00-024F;
   font-weight: 400;
 }
 @font-face {
-  font-family: 'Roboto-Bold', sans-serif;
+  font-family: 'Roboto-Bold';
   src: url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
   unicode-range: U+00-024F;
   font-weight: 700;
 }
-
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Roboto', 'TaipeiSansTCBeta-Regular', 'Noto Sans TC', sans-serif !important;
+}
 body {
   font-family: 'Roboto', 'TaipeiSansTCBeta-Regular', 'Noto Sans TC', sans-serif !important;
 }
@@ -166,38 +173,43 @@ body {
   background: $yellow;
 }
 .font-bold {
-  font-family: TaipeiSansTCBeta-Bold;
+  font-family: 'TaipeiSansTCBeta-Bold';
 }
 .font-light {
-  font-family: TaipeiSansTCBeta-Bold;
+  font-family: 'TaipeiSansTCBeta-Bold';
 }
 .subtitle1 {
+  font-family: 'Roboto', 'TaipeiSansTCBeta-Regular', 'Noto Sans TC', sans-serif;
   font-size: 1rem;
 }
 .subtitle2 {
+  font-family: 'Roboto', 'TaipeiSansTCBeta-Regular', 'Noto Sans TC', sans-serif;
   font-size: 14px;
 }
 .body1 {
+  font-family: 'Roboto', 'TaipeiSansTCBeta-Regular', 'Noto Sans TC', sans-serif;
   font-size: 1rem;
   letter-spacing: 31px;
 }
 .body2 {
+  font-family: 'Roboto', 'TaipeiSansTCBeta-Regular', 'Noto Sans TC', sans-serif;
   font-size: 14rem;
   letter-spacing: 18px;
 }
 .botton-font {
+  font-family: 'Roboto', 'TaipeiSansTCBeta-Regular', 'Noto Sans TC', sans-serif;
   font-size: 14px;
 }
 .caption {
+  font-family: 'Roboto', 'TaipeiSansTCBeta-Regular', 'Noto Sans TC', sans-serif;
   font-size: 12px;
 }
 .Overline {
+  font-family: 'Roboto', 'TaipeiSansTCBeta-Regular', 'Noto Sans TC', sans-serif;
   font-size: 10px;
 }
 .my-container {
   max-width: (calc(100vw - 150px));
-  // max-width: (calc(100vw - 150px));
-  max-width: 1440px;
   margin: 0 auto;
   padding: 0px;
 }
