--- a/src/style/event/event_detail_info.scss
+++ b/src/style/event/event_detail_info.scss
@@ -1,15 +1,15 @@
 @import '../default.scss';
 
-.class-info-card {
+.event-info-card {
   width: 345px;
   // height: 400px;
   border-radius: 10px !important;
   padding: 0px;
   .card_body {
-    padding: 42px 0 35px 35px;
+    padding: 42px 0 42px 35px;
   }
 
-  .class_card_paragraph {
+  .paragraph {
     margin-bottom: 44px;
     display: flex;
     align-items: flex-start;
@@ -22,13 +22,8 @@
     color: $gray-default;
     margin-left: 15px;
     line-height: 20px;
-
     .small-title {
       font-family: 'TaipeiSansTCBeta-Bold';
-      font-size: 16px;
-    }
-    .subtitle2 {
-      font-size: 16px;
     }
   }
 }
