--- a/client/src/style/event/event_detail.scss
+++ b/client/src/style/event/event_detail.scss
@@ -213,4 +213,15 @@ $url: 'http://localhost:3000';
       background: $primary-050 !important;
     }
   }
+  .event-tag-box {
+    margin-top: 36px;
+    .tag {
+      padding: 6px 12px;
+      font-size: 12px;
+      border: 1px solid #4b4b4b;
+      justify-content: center;
+      align-items: center;
+      margin-right: 10px;
+    }
+  }
 }
