--- a/client/src/style/event/event_detail.scss
+++ b/client/src/style/event/event_detail.scss
@@ -22,15 +22,24 @@ $url: 'http://localhost:3000';
   }
   // 發起者頭像
   .organizer {
-    width: 56px;
-    height: 56px;
-    border-radius: 50%;
-    overflow: hidden;
-    margin-right: 75px;
-    border: 1px solid gray;
-    img {
-      width: 100%;
+    figure {
+      width: 56px;
+      height: 56px;
+      border-radius: 50%;
+      overflow: hidden;
+      // margin-right: 75px;
+      margin: 0px;
+      // border: 1px solid gray;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center center;
+      }
     }
+  }
+  .host {
+    margin-left: 18px;
   }
 
   // 課程簡易資訊欄大區(含按鈕)
