--- a/client/src/style/event/event_detail_attendant.scss
+++ b/client/src/style/event/event_detail_attendant.scss
@@ -24,7 +24,7 @@ $url: 'http://localhost:3000';
       left: calc(50% - 47.5px);
       overflow: hidden;
       img {
-        widows: 100%;
+        width: 100%;
         height: 100%;
         object-fit: cover;
         object-position: center center;
