--- a/client/src/style/event/event_fixed_bottom.scss
+++ b/client/src/style/event/event_fixed_bottom.scss
@@ -30,6 +30,7 @@
         border-radius: 20px;
         margin-left: 72px;
         font-size: 21px;
+        transition: 0.5s;
         &:hover {
           transform: translateY(2px);
           box-shadow: 0 3px 3px rgba(25, 25, 25, 0.3);
