--- a/Client/src/style/class/Carousel1.scss
+++ b/Client/src/style/class/Carousel1.scss
@@ -5,5 +5,10 @@
   .class_carousel {
     max-width: 1160px;
     height: 500px;
+    img {
+      object-fit: cover;
+      height: 100%;
+      width: 100%;
+    }
   }
 }
