--- a/Client/src/style/class/ClassResultCard.scss
+++ b/Client/src/style/class/ClassResultCard.scss
@@ -32,8 +32,11 @@
 
   .card-text {
     overflow: hidden;
-    white-space: nowrap;
+    // white-space: nowrap;
     text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
   }
 
   .bbb {
