參與者剩取消要接訂單紀錄，搜尋完成

--- a/client/src/style/event/event_card_ver.scss
+++ b/client/src/style/event/event_card_ver.scss
@@ -11,11 +11,17 @@
   // border: 1px solid;
 }
 .event-card-vertical {
+  .card-wrapper {
+    // background: coral;
+    width: 271px;
+  }
   .card {
     border: 1px solid transparent !important;
+    margin: 32px 9.5px;
   }
 
   .ccard {
+    // background: crimson;
     width: 271px;
     height: 350px;
     border: 1px solid transparent;
