--- a/client/src/style/event/event_result.scss
+++ b/client/src/style/event/event_result.scss
@@ -12,6 +12,9 @@
       line-height: 38px;
     }
   }
+  .result-card {
+    width: 100%;
+  }
   .result-header {
     margin-top: 72px;
     .result-icon {
