--- a/client/src/style/event/event_attendant.scss
+++ b/client/src/style/event/event_attendant.scss
@@ -3,23 +3,17 @@ $url: 'http://localhost:3000';
 
 //EventAttendant
 
-.att-wave-height {
-  background: $primary-200;
-  height: 160px;
-}
 .att-container {
   width: 740px;
   margin: 0px auto;
   // background: cadetblue;
 }
 .back {
-  // position: relative;
   background-image: url($url + '/Pic/SVG/wave-blue-attbg-1440.svg');
   background-repeat: no-repeat;
   background-size: contain;
   background-position: top;
-
-  // height: 200vh;
+  min-height: 100vh;
   .content {
     // position: absolute;
     padding: 62px 0px 120px 0px;
@@ -46,13 +40,14 @@ $url: 'http://localhost:3000';
       padding: 0px;
       li {
         margin-top: 3px;
-        padding: 9px 12px;
+        padding: 9px 24px;
         cursor: pointer;
       }
       .selected-status {
         border-bottom: $secondary 5px solid;
         color: $secondary;
         font-family: 'TaipeiSansTCBeta-Bold';
+        transform: translateY(-3px);
       }
     }
   }
@@ -66,6 +61,7 @@ $url: 'http://localhost:3000';
 .list {
   // background: sienna;
   margin-top: 20px;
+  // background: chartreuse;
   .list-content {
     height: 112px;
     max-width: 740px;
@@ -83,12 +79,13 @@ $url: 'http://localhost:3000';
         border: rgba(0, 0, 0, 0.6) 1px solid;
         overflow: hidden;
         background: $gray-default;
-        .img {
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
-        }
       }
+    }
+    .photo {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      cursor: pointer;
     }
     .detail {
       margin: 0px;
