討論版進行中

--- a/client/src/style/event/event_detail.scss
+++ b/client/src/style/event/event_detail.scss
@@ -10,6 +10,11 @@ $url: 'http://localhost:3000';
   background-repeat: no-repeat;
   background-size: contain;
   background-position: top;
+
+  .MuiBreadcrumbs-ol {
+    margin-bottom: 24px;
+  }
+
   .mainclass_wrapper {
     max-width: 1160px;
     margin: 0 auto;
