--- a/client/src/style/event/event_fixed_bottom.scss
+++ b/client/src/style/event/event_fixed_bottom.scss
@@ -1,7 +1,7 @@
 .event-fixed_bottom {
   backdrop-filter: blur(100px);
   background: rgba(255, 255, 255, 0.5);
-  position: fixed;
+  position: sticky;
   bottom: 0;
   width: 100%;
   z-index: 10;
