做完討論版，做標籤搜尋前的存檔

--- a/client/src/style/event/event_detail.scss
+++ b/client/src/style/event/event_detail.scss
@@ -97,7 +97,7 @@ $url: 'http://localhost:3000';
   }
 
   // 商品圖片
-  .class_pic {
+  .event_pic {
     width: 730px;
     height: 305px;
     overflow: hidden;
