--- a/client/src/style/event/event_forum.scss
+++ b/client/src/style/event/event_forum.scss
@@ -18,6 +18,7 @@ $url: 'http://localhost:3000';
       // box-shadow: 0 3px 3px rgba(25, 25, 25, 0.3);
       .host {
         color: $secondary;
+        margin: 0px;
       }
       .attendants {
         color: $gray-default;
@@ -25,6 +26,10 @@ $url: 'http://localhost:3000';
       .message-name {
         font-family: 'TaipeiSansTCBeta-Bold';
         margin-right: 8px;
+      }
+      .timestamp {
+        font-size: 12px;
+        color: $gray-default;
       }
     }
     .talk-attendant-avatar {
