--- a/Client/src/style/class/class_card2.scss
+++ b/Client/src/style/class/class_card2.scss
@@ -66,13 +66,17 @@
     margin-bottom: 10px;
   }
 
+  .address {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+
   .suggest-card-text {
     font-size: 12px;
     margin-bottom: 5px;
     align-self: center;
     margin-top: 0px;
-
-    /* border:1px solid gray; */
   }
 
   .ggg {
@@ -104,6 +108,10 @@
     &:hover {
       transform: translateY(2px);
       box-shadow: 0 3px 3px rgba(25, 25, 25, 0.3);
+    }
+    a {
+      text-decoration: none;
+      color: white;
     }
   }
 
