--- a/Client/src/style/class/main_class.scss
+++ b/Client/src/style/class/main_class.scss
@@ -224,4 +224,34 @@ $url: 'http://localhost:3000';
     // border: 1px solid red;
     margin-bottom: 80px;
   }
+
+  .fixbutton {
+    width: 70px;
+    height: 70px;
+    font-size: 20px;
+    background: #175fab;
+    color: white;
+    justify-content: center;
+    align-items: center;
+    right: 0px;
+    bottom: 200px;
+    z-index: 99;
+    opacity: 0.5;
+    transition: opacity 0.4s;
+    animation: fadeIn 1s;
+
+    &:hover {
+      color: white;
+      opacity: 1;
+    }
+
+    @keyframes fadeIn {
+      0% {
+        opacity: 0;
+      }
+      100% {
+        opacity: 0.5;
+      }
+    }
+  }
 }
