--- a/Client/src/style/class/search_main.scss
+++ b/Client/src/style/class/search_main.scss
@@ -15,6 +15,10 @@
 
   .right-side {
     margin-left: 70px;
+    .pagination {
+      display: flex;
+      justify-content: center;
+    }
   }
 
   .search-result {
@@ -28,5 +32,35 @@
     display: flex;
     justify-content: center;
     margin-bottom: 40px;
+  }
+
+  .fixbutton {
+    width: 70px;
+    height: 70px;
+    font-size: 20px;
+    background: #175fab;
+    color: white;
+    justify-content: center;
+    align-items: center;
+    right: 0px;
+    bottom: 200px;
+    z-index: 99;
+    opacity: 0.5;
+    transition: opacity 0.4s;
+    animation: fadeIn 1s;
+
+    &:hover {
+      color: white;
+      opacity: 1;
+    }
+
+    @keyframes fadeIn {
+      0% {
+        opacity: 0;
+      }
+      100% {
+        opacity: 0.5;
+      }
+    }
   }
 }
