--- a/src/style/member/member_score.scss
+++ b/src/style/member/member_score.scss
@@ -41,6 +41,7 @@
       figure {
         padding: 8px 0;
         margin: 0;
+        object-fit: cover;
         figcaption {
           // padding: 8px 0;
           font-size: 12px;
