--- a/client/src/style/event/event_result.scss
+++ b/client/src/style/event/event_result.scss
@@ -62,4 +62,9 @@
       display: none;
     }
   }
+  .pagination {
+    margin-top: 48px;
+    display: flex;
+    justify-content: center;
+  }
 }
