--- a/client/src/style/event/event_card_hor.scss
+++ b/client/src/style/event/event_card_hor.scss
@@ -15,6 +15,14 @@
   margin: 9px auto;
   // background: #add0e4;
   width: 1160px;
+  cursor: pointer;
+  &:hover {
+    .event-photo {
+      img {
+        transform: scale(1.2);
+      }
+    }
+  }
 
   .bookmark {
     height: 50px;
@@ -32,10 +40,12 @@
     z-index: 1;
     background: $primary-050;
     overflow: hidden;
+    cursor: pointer;
     img {
       width: 100%;
       height: 100%;
       object-fit: cover;
+      transition: 0.7s;
     }
   }
 
