--- a/client/src/style/event/event_card_ver.scss
+++ b/client/src/style/event/event_card_ver.scss
@@ -18,6 +18,14 @@
   .card {
     border: 1px solid transparent !important;
     margin: 32px 9.5px;
+    cursor: pointer;
+    &:hover {
+      .event-photo {
+        img {
+          transform: scale(1.2);
+        }
+      }
+    }
   }
 
   .ccard {
@@ -48,6 +56,7 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
+        transition: 0.7s;
       }
     }
 
