--- a/src/style/member/member_content.scss
+++ b/src/style/member/member_content.scss
@@ -29,6 +29,7 @@
     height: 34px;
     border-radius: 25px;
     background-color: #104b6d;
+    border: 0px;
     color: #ffffff;
     font-family: 'TaipeiSansTCBeta-Regular';
   }
