--- a/Client/src/style/class/ClassResultCard.scss
+++ b/Client/src/style/class/ClassResultCard.scss
@@ -7,6 +7,7 @@
   width: 100%;
   height: 204px;
   padding: 14px 14px 14px 0;
+  position: relative;
   .card-body {
     padding-top: 0;
   }
@@ -49,18 +50,17 @@
     width: 271px;
     height: 183px;
     object-fit: fill;
-    position: relative;
     border-radius: 10px;
     z-index: 1;
+    // border: 2px solid red;
   }
 
   .tag {
     height: 50px;
     z-index: 400;
     position: absolute;
-    top: 0px;
-    right: 0px;
-    border: 40px solid red;
+    left: 210px;
+    top: 10px;
   }
 
   .icon {
@@ -92,7 +92,9 @@
     box-shadow: 0 6px 6px rgba(25, 25, 25, 0.2);
     justify-content: center;
     align-items: center;
-    // border: 1px solid red;
+    position: absolute;
+    top: 160px;
+    right: 20px;
     &:hover {
       transform: translateY(2px);
       box-shadow: 0 3px 3px rgba(25, 25, 25, 0.3);
