活動相簿都接到資料了，接著做modal的部分

--- a/client/src/style/event/event_album.scss
+++ b/client/src/style/event/event_album.scss
@@ -47,6 +47,11 @@
         figure {
           height: 28vh;
           background: skyblue;
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+          }
         }
       }
     }
