--- a/Client/src/style/class/class_card2.scss
+++ b/Client/src/style/class/class_card2.scss
@@ -7,6 +7,13 @@
   width: 271px;
   height: 320x;
   border-radius: 10px !important;
+  &:hover {
+    .card-img-top {
+      transform: scale(1.2);
+      transition: 0.7s;
+      border: 1px solid red;
+    }
+  }
 
   .cardtitle {
     font-size: 16px;
@@ -18,9 +25,13 @@
     height: 183px;
     object-fit: fill;
     z-index: 1;
-    // position: relative;
     margin-top: -50px;
     border-radius: 10px;
+    overflow: hidden;
+    .card-img-top {
+      width: 100%;
+      height: 100%;
+    }
   }
   .tag {
     height: 50px;
