相簿失敗，進行和登入整合前的存檔

--- a/client/src/style/event/event_album.scss
+++ b/client/src/style/event/event_album.scss
@@ -101,11 +101,9 @@
         }
       }
     }
-    .imagehover {
-      &:hover {
-        border: 3px solid $primary-100;
-        border-radius: 5px;
-      }
+    .image-selected {
+      border: 3px solid $primary-100;
+      border-radius: 5px;
     }
   }
 }
