--- a/client/src/style/event/event_album.scss
+++ b/client/src/style/event/event_album.scss
@@ -46,7 +46,7 @@
         cursor: pointer;
         margin-bottom: 20px;
         figure {
-          height: 28vh;
+          height: 36vh;
           background: gray;
           img {
             width: 100%;
@@ -70,18 +70,16 @@
     .image {
       margin-bottom: 20px;
       cursor: pointer;
+      // border: rgb(0, 195, 255) 1px solid;
+      padding: 10px;
 
       figure {
-        height: 172px;
-        background: gray;
         position: relative;
-        transition: 0.4s;
         overflow: hidden;
+        cursor: pointer;
+        border: 4px solid rgba($color: #000000, $alpha: 0);
+        border-radius: 3px;
 
-        &:hover {
-          border: 3px solid $primary-100;
-          border-radius: 5px;
-        }
         img {
           width: 100%;
           height: 100%;
@@ -89,9 +87,8 @@
         }
         .gray {
           position: absolute;
-          height: 172px;
           width: 100%;
-          top: 0;
+          bottom: 0;
           left: 0;
           background: rgba(0, 0, 0, 0.6);
           color: white;
@@ -102,8 +99,10 @@
       }
     }
     .image-selected {
-      border: 3px solid $primary-100;
-      border-radius: 5px;
+      border: 4px solid $blue !important;
     }
+  }
+  .d-none {
+    display: none;
   }
 }
