--- a/src/style/member/member_score.scss
+++ b/src/style/member/member_score.scss
@@ -12,6 +12,10 @@
         border-radius: 50%;
         margin: 0 24px 0 24px;
       }
+
+      .mem_toscore:hover {
+        opacity: 0.5;
+      }
     }
 
     .score_p {
