改好navbar登入狀態頭貼切換

--- a/client/src/style/navbar.scss
+++ b/client/src/style/navbar.scss
@@ -63,4 +63,11 @@ main > .container {
   .loginoutbtn {
     padding-right: 75px;
   }
+  .logoutbtn {
+    padding: 0px;
+    margin: 0px;
+  }
+  .dropdown-menu {
+    transform: translateX(-120px);
+  }
 }
