--- a/client/src/style/event/event_detail_attendant.scss
+++ b/client/src/style/event/event_detail_attendant.scss
@@ -40,6 +40,7 @@ $url: 'http://localhost:3000';
       //   margin: auto;
       .host {
         color: $secondary;
+        margin: 0px;
       }
       .attendants {
         color: $gray-default;
