--- a/client/src/style/event/event_detail.scss
+++ b/client/src/style/event/event_detail.scss
@@ -14,6 +14,26 @@ $url: 'http://localhost:3000';
   .MuiBreadcrumbs-ol {
     margin-bottom: 24px;
   }
+  .fixbutton {
+    width: 70px;
+    height: 70px;
+    font-size: 20px;
+    background: #175fab;
+    color: white;
+    justify-content: center;
+    align-items: center;
+    right: 100px;
+    bottom: 100px;
+    z-index: 99;
+    opacity: 0.5;
+    transition: opacity 0.4s;
+    animation: fadeIn 1s;
+
+    &:hover {
+      color: white;
+      opacity: 1;
+    }
+  }
 
   .mainclass_wrapper {
     max-width: 1160px;
@@ -174,20 +194,6 @@ $url: 'http://localhost:3000';
     background: $primary-200;
     width: 100%;
     margin: 0px auto;
-  }
-
-  .scroll {
-    position: absolute;
-    font-family: 'Roboto-Bold';
-    z-index: 55;
-    right: 91px;
-    bottom: 48px;
-    color: $primary;
-    // background: blue;
-    text-align: right;
-    .c-icon {
-      margin-left: 12px;
-    }
   }
 
   h4 {
