--- a/src/style/cart/buydetails.scss
+++ b/src/style/cart/buydetails.scss
@@ -81,6 +81,8 @@
         color: #104b6d;
         opacity: 60%;
         border: 1px solid;
+        font-family: 'TaipeiSansTCBeta-Bold';
+        font-size: $font-size-base * 1.25;
       }
 
       th {
