--- a/src/style/cart/activityordercolumn2.scss
+++ b/src/style/cart/activityordercolumn2.scss
@@ -44,6 +44,31 @@
     .centertrtd {
       padding: 20px 0;
       border: 1px solid;
+      .btnn {
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+        background-color: #daf0fd;
+        margin-right: 5px;
+        outline: none;
+        border: none;
+        &:hover {
+          color: white;
+        }
+      }
+      .btnn2 {
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+        background-color: #c4fcfa;
+        margin-left: 5px;
+        display: inline-block;
+        outline: none;
+        border: none;
+        &:hover {
+          color: white;
+        }
+      }
       .trco {
         color: #2d6281;
         font-size: 20px;
@@ -79,6 +104,11 @@
         width: 130px;
         height: 79px;
         border-radius: 10px;
+      }
+      .context {
+        font-size: 16px;
+        margin-left: 60px;
+        font-family: 'TaipeiSansTCBeta-Regular';
       }
     }
   }
