--- a/src/style/cart/totalinf.scss
+++ b/src/style/cart/totalinf.scss
@@ -15,7 +15,7 @@
     justify-content: space-between;
     width: 500px;
     .inft {
-      font-family: 'TaipeiSansTCBeta-Regular';
+      font-family: 'TaipeiSansTCBeta-Bold';
       font-size: $font-size-base * 1.25;
       color: #4f7f9a;
       margin-left: 35px;
