--- a/src/style/cart/buydetails.scss
+++ b/src/style/cart/buydetails.scss
@@ -8,7 +8,7 @@
 .buydetailsobb {
   background-color: white;
   width: 1160px;
-  height: 668px;
+  height: 700px;
   margin: auto;
   border-radius: 10px;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
@@ -28,6 +28,8 @@
       justify-content: space-between;
       .ttext {
         margin-left: 30px;
+        $font-size-base: 1rem;
+        font-family: 'TaipeiSansTCBeta-Bold';
       }
       .timg {
         width: 40px;
@@ -47,6 +49,9 @@
       width: 250px;
       margin-left: 35px;
       .infd {
+        $font-size-base: 1rem;
+        font-family: 'TaipeiSansTCBeta-Regular';
+        margin-top: 14px;
       }
     }
   }
@@ -112,6 +117,11 @@
         height: 79px;
         border-radius: 10px;
         margin-left: 35px;
+      }
+      .tdtext {
+        font-family: 'TaipeiSansTCBeta-Regular';
+        font-size: $font-size-base * 1.25;
+        margin-left: 36px;
       }
     }
   }
