--- a/client/src/style/cart/buttonx3.scss
+++ b/client/src/style/cart/buttonx3.scss
@@ -1,8 +1,15 @@
-@import '~bootstrap/scss/bootstrap.scss';
+// @import '~bootstrap/scss/bootstrap.scss';
+@import '../default.scss';
 
 .buttonx3 {
+  max-width: 1160px;
+  margin: 0px auto;
+  margin-top: 100px;
+
   font-family: 'TaipeiSansTCBeta-Regular';
   font-size: $font-size-base * 1.25;
-  margin-left: 20px;
-  margin-top: 20px;
+
+  .bottom {
+    padding: 125px;
+  }
 }
