--- a/client/src/style/cart/fukuanbutton.scss
+++ b/client/src/style/cart/fukuanbutton.scss
@@ -1,5 +1,6 @@
 // 導入bootstrap所有的樣式與預設變數
-@import '~bootstrap/scss/bootstrap.scss';
+// @import '~bootstrap/scss/bootstrap.scss';
+@import '../default.scss';
 
 // 其它要導入覆蓋掉原本的預設bootstrap樣式要放在這下面
 .fukuanbutton {
