--- a/client/src/style/cart/storeconfirmframe.scss
+++ b/client/src/style/cart/storeconfirmframe.scss
@@ -1,34 +1,32 @@
 // 導入bootstrap所有的樣式與預設變數
-@import '~bootstrap/scss/bootstrap.scss';
+// @import '~bootstrap/scss/bootstrap.scss';
+@import '../default.scss';
 
 // 其它要導入覆蓋掉原本的預設bootstrap樣式要放在這下面
 
-.storeconfirmframetop{
-    margin-top: 96px;
+.storeconfirmframetop {
+  margin-top: 96px;
 
-    .storeconfirmframe1{
-        width: 741px;
-        height: 76px;
-        background-color:#ADCBDD;
-        top: 96px;
-        margin:0px auto;
-        border-radius: 10px 10px 0 0;
-        text-align:center;
-        color: #2D6281;
-        line-height:76px;
-        font-size: 20px;
-        font-family: 'TaipeiSansTCBeta-Bold';
-        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
-
-    }
-    .storeconfirmframe2{
-        width: 741px;
-        height: 364px;
-        background-color:white;
-        margin: 0px auto;
-        border-radius: 0 0 10px 10px;
-        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
-        
-    }
-
+  .storeconfirmframe1 {
+    width: 741px;
+    height: 76px;
+    background-color: #adcbdd;
+    top: 96px;
+    margin: 0px auto;
+    border-radius: 10px 10px 0 0;
+    text-align: center;
+    color: #2d6281;
+    line-height: 76px;
+    font-size: 20px;
+    font-family: 'TaipeiSansTCBeta-Bold';
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
+  }
+  .storeconfirmframe2 {
+    width: 741px;
+    height: 364px;
+    background-color: white;
+    margin: 0px auto;
+    border-radius: 0 0 10px 10px;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
+  }
 }
