--- a/client/src/style/soya/login2.scss
+++ b/client/src/style/soya/login2.scss
@@ -7,6 +7,11 @@ $url: 'http://localhost:3000';
   box-shadow: 0 0 1px transparent !important;
 }
 
+
+.googlebutton{
+  background: red;
+}
+
 .wrapper {
   max-width: 1440px;
   margin: 0 auto;
@@ -71,6 +76,12 @@ $url: 'http://localhost:3000';
       border-radius: 5px;
       background: #1877f2;
       color: white;
+
+      &:hover{
+        transform: translateY(-3px);
+        box-shadow: 0 4px 6px rgba(#000, 0.3);
+        transition: 0.5s;
+      }
     }
 
     .loginbtnthemeicon1 {
@@ -82,6 +93,12 @@ $url: 'http://localhost:3000';
       border-radius: 5px;
       background: white;
       color: #707070;
+
+      &:hover{
+        transform: translateY(-3px);
+        box-shadow: 0 4px 6px rgba(#000, 0.3);
+        transition: 0.5s;
+      }
       .loginbtnthemeicon2 {
         margin-right: 5px;
         width: 22px;
@@ -93,6 +110,12 @@ $url: 'http://localhost:3000';
       background: #1da1f2;
       color: white;
       margin-right: 0;
+
+      &:hover{
+        transform: translateY(-3px);
+        box-shadow: 0 4px 6px rgba(#000, 0.3);
+        transition: 0.5s;
+      }
 
       .loginbtnthemeicon3 {
         margin-right: 5px;
@@ -109,6 +132,11 @@ $url: 'http://localhost:3000';
       font-size: $h6-font-size;
       font-family: 'TaipeiSansTCBeta-Regular';
       box-shadow: 0 3px 6px rgba(#000, 0.2);
+
+      &:hover{
+        background: $primary-600;
+        transition: 0.5s;
+      }
     }
 
     .noaccount {
@@ -123,6 +151,11 @@ $url: 'http://localhost:3000';
         margin-left: 10px;
         text-decoration: none;
         color: #12d0c9;
+
+        &:hover{
+          color: $primary-400;
+          transition: 0.5s;
+        }
       }
     }
   }
