--- a/client/src/style/soya/eventstart3.scss
+++ b/client/src/style/soya/eventstart3.scss
@@ -196,6 +196,10 @@ $url: "http://localhost:3000";
               margin: 0;
               padding: 12px 60px;
               flex-grow: 1;
+
+              &:hover{
+                background:$primary-600;
+              }
               
              
             }
