--- a/client/src/style/soya/soya5.scss
+++ b/client/src/style/soya/soya5.scss
@@ -111,6 +111,11 @@ $url: "http://localhost:3000";
                         border: none;
                         color: white;
                         align-items: center;
+
+                        &:hover{
+                            background:$primary-500;
+                            transition: background 0.5s;
+                        }
                     }
                 }
             }
@@ -225,7 +230,13 @@ $url: "http://localhost:3000";
 
             .classmoreclass{
                 font-size: $h6-font-size;
-                color: rgba($color: #000000, $alpha: 0.7);
+                color: rgba($color: #000000, $alpha: 0.6);
+
+                &:hover{
+
+                    color: rgba($color: #000000, $alpha: 0.9);
+                    transition: 0.5s;
+                }
             }
 
             .classmoreclassline{
