--- a/client/src/style/cart/buydetails.scss
+++ b/client/src/style/cart/buydetails.scss
@@ -8,8 +8,8 @@
 }
 .buydetailsobb {
   background-color: white;
-  width: 1160px;
-  height: 700px;
+  max-width: 1160px;
+  min-height: 400px;
   margin: auto;
   border-radius: 10px;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
