--- a/client/src/style/cart/lineconfirmframe.scss
+++ b/client/src/style/cart/lineconfirmframe.scss
@@ -28,5 +28,9 @@
     margin: 0px auto;
     border-radius: 0 0 10px 10px;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
+    .lineimg {
+      width: 740px;
+      height: 480px;
+    }
   }
 }
