--- a/client/src/style/cart/paymentparticipantinf2.scss
+++ b/client/src/style/cart/paymentparticipantinf2.scss
@@ -63,7 +63,7 @@
   }
   .marginb {
     margin-bottom: 34px;
-    width: 100px;
+    width: 120px;
     justify-content: flex-end;
   }
   .redt {
@@ -82,6 +82,7 @@
     justify-content: flex-end;
   }
   .sex {
-    margin-left: 20px;
+    margin-left: 40px;
+    padding-top: 5px;
   }
 }
