--- a/client/src/style/member/member_photo.scss
+++ b/client/src/style/member/member_photo.scss
@@ -4,6 +4,11 @@
   width: 220px;
   height: 150px;
   margin: 38px 0px 43px 0px;
+
+  .albumtitle {
+    width: 210px;
+    height: 32px;
+  }
   h6 {
     text-align: center;
   }
