--- a/client/src/style/member/member_navbar.scss
+++ b/client/src/style/member/member_navbar.scss
@@ -1,7 +1,7 @@
 @import '../default.scss';
 
-.navbarbox {
-  .navbar {
+.navbarbox1 {
+  .navbarmem {
     position: absolute;
     margin: 0 auto;
     padding: 12px 0px;
@@ -12,17 +12,16 @@
       }
     }
   }
-}
-
-.navbar {
-  &:hover {
-    & .main_li {
-      &:hover {
-        a {
-          background-color: $secondary-050;
-          border-right: solid 2px $secondary-300;
-          border-left: solid 2px $secondary-300;
-          color: $secondary-300;
+  .navbarmem {
+    &:hover {
+      & .main_li {
+        &:hover {
+          a {
+            background-color: $secondary-050;
+            border-right: solid 2px $secondary-300;
+            border-left: solid 2px $secondary-300;
+            color: $secondary-300;
+          }
         }
       }
     }
