修正sopia部分，tina fixedbottom，標籤搜尋成功(要重新整理頁面)，準備拉eason的更新

--- a/client/src/style/class/fixed_bottom.scss
+++ b/client/src/style/class/fixed_bottom.scss
@@ -8,6 +8,10 @@
   padding-top: 13px;
   padding-bottom: 13px;
 
+  .d-none {
+    display: none;
+  }
+
   .fixed_bottom_wrapper {
     // border: 1px solid black;
     max-width: 1160px;
