--- a/client/src/style/class/main_class.scss
+++ b/client/src/style/class/main_class.scss
@@ -132,6 +132,11 @@ $url: 'http://localhost:3000';
       height: 386px;
       margin-top: 35px;
       border-radius: 10px;
+      .google_map {
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+      }
     }
   }
   .class_title {
